# agent-pld-metrics

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Practitioner_Vocabulary_Mapping_Guide.md  README.md  SUMMARY.md  archive_legacyPLD_Runtime_Standard_v2.0.md  manifest.yaml  pyproject.toml  requirements.txt  validate_manifest.py
.github/workflows/: validate.yml
LICENSE/: LICENSE.md
LICENSES/: LICENSE-APACHE-2.0.txt  LICENSES.md  NOTICE.txt  TRADEMARK_POLICY.md  citation.bib
analytics/metrics_frameworks/: PRDR_framework.md  VRL_framework.md  continue_repair_ratio.md  failure_mode_clustering.md  session_closure_typology.md
analytics/taxonomy/: metrics_alignment_table.md
archive/: archive_legacyhello_pld_runtime.py
archive/archive_legacy/: drift_event_logging.md  minimal_pld_demo.py  pld_events_demo_report.md  runtime_event_envelope.notes.md
archive_legacy/: README.md  run_minimal_engine.py
docs/: PLD_Event_Semantic_Spec_v2.0.md  PLD_Runtime_Standard_v2.0.md  README.md  README_docs.md
docs/architecture/: README.md  layers.md  model_diagram_notes.md  principles.md  runtime_modes.md
docs/concepts/: 01_introduction.md  02_drift_repair_model.md  03_repair_strategies.md  reference_map.md
docs/contributing/: PLD_Runtime_Implementation_Rules.md
docs/labs/: README.md  shift_taxonomy_proposal_v0.9.md
docs/metrics/: 07_pld_operational_metrics_cookbook.md  PLD_metrics_spec.md  pld_operational_metrics_cookbook.md
docs/operator_primitives/: 01_detect_drift.md  02_soft_repair.md  04_latency_operator.md
docs/patterns/: README_patterns.md
examples/: __init__.py
governance/: PLD_business_overview.md  PoC_kickoff_guide.md  README.md  community_roles.md  onboarding.md  poc_protocol.md  protocol.md
langgraph_assistants/: agent_node.py  graph.py  pld_runtime_integration.py  run.py
meta/: CHANGELOG.md  METADATA_MANIFEST_SPEC.md  ROADMAP.md  VERSIONING_POLICY.md  manifest.example.yaml
pitch/: 00_README_Start_Here.md  01_PLD_in_30_seconds.md  02_Why_MultiTurn_Agents_Fail.md  03_PLD_Business_Value_Story.md  04_Internal_Pitch_Kit.md
pld_runtime/: README.md  __init__.py
quickstart/: README_quickstart.md  easy_pld_demo.py  hello_pld_runtime.py  minimal_pld_demo.py  run_minimal_engine.py
tests/: __init__.py  test_basic.py
(+150 files in other folders)
