[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pld-runtime"
version = "2.0.0"
description = "Phase Loop Dynamics (PLD) - A Runtime Phase Model for Stable Multi-Turn LLM Systems"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Kiyoshi Sasano"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []  # Core runtime has no dependencies

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]
examples = [
    "langgraph>=0.0.10",
    "openai>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["pld_runtime*", "pld_runtime.*"]
