[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pld-runtime"
version = "2.0.0"
description = "Phase Loop Dynamics (PLD) - A Runtime Phase Model for Stable Multi-Turn LLM Systems"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Kiyoshi Sasano"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core runtime dependencies (Synchronized with requirements.txt)
dependencies = [
    "pyyaml",
    "jsonschema>=4.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "mypy"
]
# Dependencies required to run scripts in examples/ and analytics/
examples = [
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["pld_runtime*", "pld_runtime.*"]
